Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -62,7 +62,7 @@ stages:
           - task: AzureWebApp@1
             displayName: 'Deploy App Service'
             inputs:
-              azureSubscription: 'Azure for Students'
+              azureSubscription: 'Azure for Students (48061ed6-7f3b-4d6b-89c5-1ff0cdf43b38)'
               appType: 'webAppLinux'
               appName: 'jitnub-my-third-app'
               package: '$(Pipeline.Workspace)/drop/$(Build.BuildId).zip'
